syntax = "proto3";

option csharp_namespace = "AspNetCore.ServiceBenchmark.Grpc.Services";

import "google/protobuf/timestamp.proto";

// The test service definition.
service TestDataService {
  // Sends a greeting
  rpc GetByIndex (IndexMessage) returns (TestItemMessage);
}

// The request message containing the user's name.
message IndexMessage {
  int32 index = 1;
}

// The response message containing the greetings.
message TestItemMessage {
  string id = 1;
  int32 index = 2;
  google.protobuf.Timestamp created_date = 3;
}
